[gd_scene load_steps=27 format=2]

[ext_resource path="res://Entities/Enemies/Robin/Collapse/RobinCollapse6.png" type="Texture" id=1]
[ext_resource path="res://Entities/Enemies/Robin/Collapse/RobinCollapse1.png" type="Texture" id=2]
[ext_resource path="res://Entities/Enemies/Robin/Collapse/RobinCollapse2.png" type="Texture" id=3]
[ext_resource path="res://Entities/Enemies/Robin/Collapse/RobinCollapse3.png" type="Texture" id=4]
[ext_resource path="res://Entities/Enemies/Robin/Collapse/RobinCollapse4.png" type="Texture" id=5]
[ext_resource path="res://Entities/Enemies/Robin/Collapse/RobinCollapse5.png" type="Texture" id=6]
[ext_resource path="res://Entities/Enemies/Robin/Idle/RobinIdle2.png" type="Texture" id=7]
[ext_resource path="res://Entities/Enemies/Robin/shoot/RobinShoot3.png" type="Texture" id=8]
[ext_resource path="res://Entities/Enemies/Robin/shoot/RobinShoot1.png" type="Texture" id=9]
[ext_resource path="res://Entities/Enemies/Robin/shoot/RobinShoot2.png" type="Texture" id=10]
[ext_resource path="res://Entities/Enemies/Robin/Idle/RobinIdle1.png" type="Texture" id=11]
[ext_resource path="res://Entities/Enemies/Robin/Collapse/RobinCollapse7.png" type="Texture" id=12]
[ext_resource path="res://Entities/Enemies/Robin/shoot/RobinShoot9.png" type="Texture" id=13]
[ext_resource path="res://Entities/Enemies/Robin/shoot/RobinShoot10.png" type="Texture" id=14]
[ext_resource path="res://Entities/Enemies/Robin/shoot/RobinShoot4.png" type="Texture" id=15]
[ext_resource path="res://Entities/Enemies/Robin/shoot/RobinShoot12.png" type="Texture" id=16]
[ext_resource path="res://Entities/Enemies/Robin/shoot/RobinShoot11.png" type="Texture" id=17]
[ext_resource path="res://Entities/Enemies/Robin/shoot/RobinShoot6.png" type="Texture" id=18]
[ext_resource path="res://Entities/Enemies/Robin/shoot/RobinShoot8.png" type="Texture" id=19]
[ext_resource path="res://Entities/Enemies/Robin/shoot/RobinShoot5.png" type="Texture" id=20]
[ext_resource path="res://Entities/Enemies/Robin/shoot/RobinShoot7.png" type="Texture" id=21]
[ext_resource path="res://Entities/Enemies/Robin/Robin.gd" type="Script" id=22]
[ext_resource path="res://SFX/SFX_-_bow_release_01.ogg" type="AudioStream" id=23]

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 48.4974, 76.5899 )

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 1 ), ExtResource( 12 ) ],
"loop": false,
"name": "Collapse",
"speed": 12.0
}, {
"frames": [ ExtResource( 12 ), ExtResource( 1 ), ExtResource( 6 ), ExtResource( 5 ), ExtResource( 4 ), ExtResource( 3 ), ExtResource( 2 ) ],
"loop": false,
"name": "Rebuild",
"speed": 8.0
}, {
"frames": [ ExtResource( 11 ), ExtResource( 7 ) ],
"loop": true,
"name": "Idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 9 ), ExtResource( 10 ), ExtResource( 8 ), ExtResource( 15 ), ExtResource( 20 ), ExtResource( 18 ), ExtResource( 21 ), ExtResource( 19 ), ExtResource( 13 ), ExtResource( 14 ), ExtResource( 17 ), ExtResource( 16 ) ],
"loop": true,
"name": "Shoot",
"speed": 18.0
} ]

[sub_resource type="Animation" id=2]
resource_name = "Hit"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 0.980392, 0.698039, 0.643137, 1 ), Color( 1, 0.247059, 0.168627, 1 ), Color( 1, 1, 1, 1 ) ]
}

[node name="Robin" type="KinematicBody2D" groups=[
"entities",
]]
modulate = Color( 0.980392, 0.698039, 0.643137, 1 )
scale = Vector2( 0.25, 0.25 )
collision_layer = 2147483652
collision_mask = 8
script = ExtResource( 22 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 12, 17 )
shape = SubResource( 3 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "Shoot"
frame = 10
playing = true

[node name="Sight" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( -2000, 0 )

[node name="ArrowSpawn" type="Position2D" parent="."]
position = Vector2( -60.5811, 0 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Hit = SubResource( 2 )

[node name="Rebuild" type="Timer" parent="."]
wait_time = 2.5
one_shot = true

[node name="Arrowtimer" type="Timer" parent="."]
wait_time = 0.2

[node name="Bow" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 23 )
bus = "SFX"
__meta__ = {
"_editor_description_": ""
}
[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
[connection signal="timeout" from="Rebuild" to="." method="_on_Rebuild_timeout"]
[connection signal="timeout" from="Arrowtimer" to="." method="_on_Arrowtimer_timeout"]
